--- a/app/src/main/res/layout/activity_genres.xml
+++ b/app/src/main/res/layout/activity_genres.xml
@@ -65,13 +65,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/btnTagFav"
+                    android:id="@+id/btnAddTag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/textcolor_btn_tag"
                     android:textAllCaps="false"
                     android:src="@drawable/ic_add_green"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     android:scaleType="centerCrop"
                     android:minHeight="0dp"
                     android:paddingTop="4dp"
