--- a/app/src/main/res/layout/lst_nieuw_zoeken_item.xml
+++ b/app/src/main/res/layout/lst_nieuw_zoeken_item.xml
@@ -7,14 +7,33 @@
     android:background="@color/colorPrimary"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/lblTitel"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:textColor="@android:color/white"
-        android:text="Titel van de film"
-        android:layout_marginBottom="10dp"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/lblTitel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:textColor="@android:color/white"
+            android:layout_weight="1"
+            android:text="Titel van de film"/>
+
+        <TextView
+            android:id="@+id/lblJaartal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="5dp"
+            android:textAlignment="textStart"
+            android:text="Jaartal"/>
+
+    </LinearLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="7"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             android:src="@drawable/no_image"
             android:adjustViewBounds="true"/>
 
@@ -40,62 +59,37 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/lblJaartal"
+                    android:id="@+id/lblOmschrijving"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:text="Omschrijving van de film"
                     android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textAlignment="center"
-                    android:text="Jaartal"/>
+                    android:textSize="15dp"/>
 
-                <TextView
-                    android:id="@+id/lblDuur"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textAlignment="center"
-                    android:text="Duur"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/lblOmschrijving"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Omschrijving van de film"
-                android:textColor="@android:color/white"
-                android:textSize="15dp"
-                android:maxLength="100"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="bottom|center"
-                android:orientation="horizontal"
-                android:weightSum="5">
-
-                <ImageButton
-                    android:id="@+id/btnAdd"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginRight="15dp"
-                    android:src="@drawable/ic_add"/>
+                    android:layout_height="match_parent"
+                    android:gravity="right|center"
+                    android:orientation="vertical">
 
-                <ImageButton
-                    android:id="@+id/btnRequest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="15dp"
-                    android:src="@drawable/ic_request"/>
+                    <ImageButton
+                        android:id="@+id/btnAdd"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_add"/>
+
+                    <ImageButton
+                        android:id="@+id/btnRequest"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_request"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
