--- a/app/src/main/res/layout/activity_beheer.xml
+++ b/app/src/main/res/layout/activity_beheer.xml
@@ -95,7 +95,7 @@
                 android:id="@+id/btnFilmToevoegen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Film Toevoegen"
+                android:text="Nieuwe films zoeken"
                 android:layout_margin="15dp" />
 
             <Button
