--- a/app/src/main/res/layout/activity_beheer.xml
+++ b/app/src/main/res/layout/activity_beheer.xml
@@ -89,6 +89,7 @@
             android:id="@+id/llFilms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <Button
@@ -112,8 +113,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
+            <ListView
+                android:id="@+id/lstGebruikers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ListView>
 
         </LinearLayout>
 
