--- a/app/src/main/res/layout/activity_beheer.xml
+++ b/app/src/main/res/layout/activity_beheer.xml
@@ -89,7 +89,7 @@
             android:id="@+id/llFilms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
+            android:visibility="visible"
             android:orientation="vertical">
 
             <Button
@@ -113,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ListView
                 android:id="@+id/lstGebruikers"
