--- a/app/src/main/res/layout/activity_film.xml
+++ b/app/src/main/res/layout/activity_film.xml
@@ -230,6 +230,40 @@
                             android:scaleType="fitXY"/>
 
                     </LinearLayout>
+
+                    <LinearLayout
+                    android:id="@+id/llArchieven"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginBottom="15dp">
+
+                    <TextView
+                        android:id="@+id/lblArchief"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="true"
+                        android:text="Archieven"
+                        android:textStyle="bold"
+                        android:textColor="#e5e5e5"/>
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/llArchievenInhoud"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
+
+                </LinearLayout>
                 </LinearLayout>
 
         </ScrollView>
