Film van archief verwijderen en toevoegen

--- a/app/src/main/res/menu/menu_film.xml
+++ b/app/src/main/res/menu/menu_film.xml
@@ -18,6 +18,12 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/action_archieven"
+        android:orderInCategory="200"
+        android:title="Archieven Wijzigen"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/action_verwijder"
         android:orderInCategory="200"
         android:title="Verwijder Film"
